--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -1,7 +1,31 @@
-.photo_box__img {
-  width: 300px;
-  height: 300px;
+.profile_box {
+  display: flex;
+  flex-flow: row wrap;
+  width: 310px;
+  border: 2px solid hsla(0, 0%, 100%, 0.6);
+}
+
+.profile_box img {
+  width: 100px;
+  height: 100px;
   border-radius: 100%;
+}
+
+.profile_box__name {
+  margin: 20px 0;
+}
+.profile_box__name h2 {
+  margin: 20px auto;
+  text-align: center;
+  font-size: 32px;
+}
+.profile_box__name button {
+  margin: 5px;
+  text-align: center;
+  border: 3px solid hsla(0, 0%, 100%, 0.6);
+  color: hsla(0, 0%, 100%, 0.6);
+  background-color: transparent !important;
+  background-image: none !important;
 }
 
 .editphoto_box__img {
