--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,40 +1,80 @@
+.up_box {
+  height: min-content;
+  margin-top: 3%;
+}
+
+.calendar {
+  width: 34em;
+  height: 59vh;
+}
+
+.middle_box {
+  text-align: center;
+}
+
+.super_title {
+  position: relative;
+  display: flex;
+  flex-flow: column wrap;
+  height: 4em;
+}
+
+.title {
+  font-size: 30px;
+  font-style: italic;
+}
+
+.copyright {
+  position: absolute;
+  bottom: 0%;
+  width: 100%;
+  text-align: center;
+}
+
+footer {
+  text-align: center;
+}
+
 @media screen and (min-width: 700px) {
   .main_box {
     display: grid;
-    grid-template-rows: 30vh 1fr;
+    grid-template-rows: 0.3fr 1.2fr 0.3fr;
     gap: 30px;
     text-align: center;
     justify-content: center;
+    justify-items: center;
   }
 
   .up_box {
+    width: 96rem;
     display: grid;
-    grid-template-columns: 20vw 50vw;
-    gap: 6.5vw;
+    grid-template-columns: 1.3fr 2fr 1fr;
+    gap: 30px;
     align-content: center;
-    justify-items: center;
+    justify-items: stretch;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
 
   .middle_box {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 1fr;
     text-align: center;
     column-gap: 30px;
-    height: 25vmax;
-  }
-  main .home {
-    background-color: #5f5f5f;
-    border-radius: 10%;
-    position: relative;
-    height: inherit;
+    width: 70rem;
+    height: 60vh;
+    justify-content: space-evenly;
+    align-items: start;
+    justify-items: center;
   }
 
-  main .home .copyright {
-    position: absolute;
-    bottom: 0%;
-    width: 100%;
+  .home {
+    border: 3px solid hsla(0, 0%, 100%, 0.6);
+    color: hsla(0, 0%, 100%, 0.6);
+    border-radius: 20px;
+    height: 45vh;
+    width: 30vh;
+    transform: translateY(70px);
     text-align: center;
   }
 
@@ -57,9 +97,14 @@
     text-align: center;
   }
 
+  .profile,
+  .quotes,
+  .notice {
+    margin: 10px auto;
+  }
+
   .middle_box {
     display: flex;
     flex-flow: column wrap;
-    text-align: center;
   }
 }
