--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -18,7 +18,7 @@
   max-width: 450px;
   margin: 0 auto;
   border-radius: 0.3rem;
-  background-color: #fff;
+  background-color: #5f5f5f;
   /* 팝업이 열릴때 스르륵 열리는 효과 */
   animation: modal-show 0.3s;
   overflow: hidden;
@@ -26,7 +26,7 @@
 .modal > section > header {
   position: relative;
   padding: 16px 64px 16px 16px;
-  background-color: #f1f1f1;
+  background-color: #212121;
   font-weight: 700;
 }
 .modal > section > header button {
