--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -1,23 +1,25 @@
 .profile_box {
   display: flex;
   flex-flow: row wrap;
-  width: 310px;
+  width: 15vw;
+  min-width: 280px;
   border: 2px solid hsla(0, 0%, 100%, 0.6);
+  justify-content: center;
 }
 
 .profile_box img {
-  width: 100px;
-  height: 100px;
+  margin: 10px;
+  width: 70px;
+  height: 70px;
   border-radius: 100%;
 }
 
 .profile_box__name {
-  margin: 20px 0;
 }
 .profile_box__name h2 {
-  margin: 20px auto;
+  margin: 10px auto;
   text-align: center;
-  font-size: 32px;
+  font-size: 26px;
 }
 .profile_box__name button {
   margin: 5px;
