--- a/src/css/calendar.css
+++ b/src/css/calendar.css
@@ -7,7 +7,7 @@
 }
 
 .react-calendar__navigation {
-  height: 5vh;
+  height: 2em;
 }
 
 .react-calendar__navigation button {
@@ -17,18 +17,26 @@
   background-color: transparent !important;
   background-image: none !important;
   font-size: 1.2em;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: "Jeju Hallasan", cursive;
 }
 
 .react-calendar__navigation__label {
   width: 130px;
 }
 
+.react-calendar__navigation__prev-button,
+.react-calendar__navigation__prev2-button,
+.react-calendar__navigation__next2-button,
+.react-calendar__navigation__next-button {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif !important;
+  font-size: 1em !important;
+}
+
 .react-calendar__navigation__prev2-button {
-  border-radius: 20px 0 0 20px;
+  border-radius: 10px 0 0 10px;
 }
 .react-calendar__navigation__next2-button {
-  border-radius: 0 20px 20px 0;
+  border-radius: 0 10px 10px 0;
 }
 
 .react-calendar__month-view__weekdays {
@@ -69,9 +77,9 @@
 .react-calendar__decade-view__years button,
 .react-calendar__century-view__decades button {
   border-radius: 20px;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: "Jeju Hallasan", cursive;
   height: 80px;
-  font-size: 27px;
+  font-size: 24px;
   border: 3px solid hsla(0, 0%, 100%, 0.6);
   color: hsla(0, 0%, 100%, 0.6);
   background-color: transparent !important;
@@ -81,4 +89,14 @@
 
 .react-calendar__viewContainer {
   height: 49vh;
+}
+
+.react-calendar__month-view__days button {
+  text-align: left;
+  padding: 0px 0px 37px 5px;
+}
+
+.react-calendar__tile--now > abbr {
+  background-color: red;
+  border-radius: 100%;
 }
