--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css2?family=Hurricane&family=Yeon+Sung&display=swap);
+
 .up_box {
   height: min-content;
   margin-top: 3%;
