--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -44,18 +44,44 @@
   padding: 16px;
   border-bottom: 1px solid #dee2e6;
   border-top: 1px solid #dee2e6;
+  height: 30vh;
+  overflow-y: scroll;
 }
+
+.modal > section > main::-webkit-scrollbar {
+  width: 10px;
+}
+
+.modal > section > main::-webkit-scrollbar-thumb {
+  background-color: black;
+  border-radius: 10px;
+  background-clip: padding-box;
+}
+
+.modal > section > main::-webkit-scrollbar-track {
+  background-color: transparent;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
 .modal > section > footer {
   padding: 12px 16px;
   text-align: right;
 }
-.modal > section > footer button {
-  padding: 6px 12px;
-  color: #fff;
-  background-color: #6c757d;
-  border-radius: 5px;
-  font-size: 13px;
+
+.todos_submit input[type="text"] {
+  background-color: transparent;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 3px solid hsla(0, 0%, 100%, 0.6);
+  color: #f2f2f2;
 }
+
+.todos_submit input[type="text"]::placeholder {
+  color: #a3a3a3;
+}
+
 .modal.openModal {
   display: flex;
   align-items: center;
