--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,18 @@ a {
   color: hsla(0, 0%, 100%, 0.6);
 }
 
+.loading {
+  height: 100vh;
+  position: relative;
+  width: 100vw;
+}
+
+.loading img {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+}
+
 @media screen and (min-width: 700px) {
   body {
     display: grid;
