--- a/src/css/todo.css
+++ b/src/css/todo.css
@@ -19,7 +19,8 @@
   align-items: center;
 }
 
-.todos_edit input[type="text"] {
+.todos_edit input[type="text"],
+.todos_submit input[type="text"] {
   background-color: transparent;
   border-top: none;
   border-left: none;
@@ -28,8 +29,18 @@
   color: #f2f2f2;
 }
 
-.todos_edit input[type="text"]::placeholder {
+.todos_edit input[type="text"]::-webkit-input-placeholder,
+.todos_submit input[type="text"]::-webkit-input-placeholder {
   color: #a3a3a3;
+  text-align: center;
+}
+.todos_submit input[type="text"] {
+  width: 25em;
+}
+
+.todos_submit button {
+  background-color: transparent;
+  transform: scale(2);
 }
 
 .todos_edit form {
@@ -66,7 +77,7 @@
   transform: translateX(-50px);
 }
 
-.todo_list__each span {
+.todo_list__each span.todo_text {
   width: 12em;
   text-overflow: ellipsis;
   white-space: nowrap;
