--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,14 +1,48 @@
-.up_box {
-  height: min-content;
+.main_box {
+  width: 93.75%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-rows: 0.3fr 1.2fr 0.2fr;
+  gap: 20px;
+  text-align: center;
+  justify-items: center;
+  align-items: center;
 }
 
-.calendar {
-  width: 34em;
-  height: 59vh;
+.up_box {
+  height: min-content;
+  width: 80%;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  gap: 2%;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .middle_box {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   text-align: center;
+  column-gap: 30px;
+  width: 80%;
+  height: 36.5em;
+  justify-content: space-evenly;
+  align-items: start;
+  justify-items: center;
+  text-align: center;
+}
+
+.bottom_box {
+  display: flex;
+  justify-content: flex-end;
+  width: 80%;
+}
+
+.calendar {
+  width: 88.51%;
+    height: 99.31%;
 }
 
 .super_title {
@@ -48,57 +82,13 @@ footer {
 }
 
 @media screen and (min-width: 700px) {
-  .main_box {
-    display: grid;
-    grid-template-rows: 0.3fr 1.2fr 0.2fr;
-    gap: 20px;
-    text-align: center;
-    justify-content: center;
-    justify-items: center;
-    align-items: center;
-  }
-
-  .up_box {
-    width: 96rem;
-    display: grid;
-    grid-template-columns: 1.3fr 2fr 1fr;
-    gap: 30px;
-    align-content: center;
-    justify-items: stretch;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-  .middle_box {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    text-align: center;
-    column-gap: 30px;
-    width: 70rem;
-    height: 36.5em;
-    justify-content: space-evenly;
-    align-items: start;
-    justify-items: center;
-  }
-
   .home {
     border: 3px solid hsla(0, 0%, 100%, 0.6);
     color: hsla(0, 0%, 100%, 0.6);
     border-radius: 20px;
-    height: 24em;
-    width: 24em;
-    transform: translateY(70px);
+    height: 98.63%;
+    width: 65%;
     text-align: center;
-    overflow-y: scroll;
-  }
-
-  .home::-webkit-scrollbar {
-    visibility: collapse;
-  }
-
-  .bottom_box {
-    display: flex;
-    justify-content: flex-end;
   }
 }
 @media screen and (max-width: 699px) {
