--- a/src/css/notice.css
+++ b/src/css/notice.css
@@ -7,8 +7,9 @@
   display: flex;
   flex-flow: column wrap;
   align-items: center;
-  width: 30em;
-  gap: 50px;
+  width: 30%;
+    gap: 30px;
+    margin: 0 auto;
 }
 
 .note-body {
@@ -44,7 +45,7 @@
   grid-row: 2/3;
   grid-column: 1/4;
   white-space: break-spaces;
-  letter-spacing: 5px;
-  font-size: 2.5em;
-  padding-top: 10px;
+  font-size: 1.6rem;
+    padding-top: 10px;
+    line-height: 20px;
 }
