22-03-31 fixed whole screen width

--- a/src/css/calendar.css
+++ b/src/css/calendar.css
@@ -116,6 +116,7 @@ button.react-calendar__month-view__days__day--neighboringMonth {
   text-align: left;
   padding: 0px 0px 37px 5px;
   height: 70px;
+  width: 70px;
 }
 
 .react-calendar__tile--now
