--- a/src/css/home.css
+++ b/src/css/home.css
@@ -6,7 +6,7 @@
 }
 
 .hot_text {
-  padding: 5px 30px;
+  padding: 5px 20px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -15,6 +15,8 @@
 .hot_body {
   height: 87%;
   overflow-y: scroll;
+  border: 3px solid hsla(0, 0%, 100%, 0.6);
+  border-radius: 20px;
 }
 .hot_body::-webkit-scrollbar {
   visibility: collapse;
@@ -26,8 +28,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  margin: 3px 50px;
-    column-gap: 25px;
+  margin: 3px 10px;
 }
 
 .fire {
