--- a/src/css/calendar.css
+++ b/src/css/calendar.css
@@ -1,8 +1,9 @@
 .react-calendar {
   margin: 0 auto;
   width: 100%;
-  height: 60vh;
+  height: max-content;
   display: grid;
+  gap: 5%;
 }
 
 .react-calendar__navigation {
@@ -50,7 +51,7 @@
   align-content: flex-start;
   align-items: stretch;
   justify-content: space-evenly;
-  height: 45vh;
+  height: min-content;
 }
 
 .react-calendar__viewContainer > div > div {
@@ -113,8 +114,8 @@ button.react-calendar__month-view__days__day--neighboringMonth {
 }
 
 .react-calendar__month-view__days button {
-  text-align: left;
-  padding: 0px 0px 37px 5px;
+  text-align: center;
+  padding: 0px 36px 37px 0px;
   height: 70px;
   width: 70px;
 }
@@ -135,7 +136,7 @@ button.react-calendar__month-view__days__day--neighboringMonth {
   border-top: 6px solid transparent;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
-  transform: translate(18px, 26px);
+  transform: translate(5px, 25px);
 }
 
 .nomal-dot {
@@ -144,9 +145,39 @@ button.react-calendar__month-view__days__day--neighboringMonth {
   width: 8px;
   background-color: #ced101;
   border-radius: 50%;
-  transform: translate(35px, 30px);
+  transform: translate(20px, 30px);
 }
 
 .no-dot {
   display: none;
+}
+
+@media screen and (max-width: 1080px) {
+  .react-calendar {
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .react-calendar__month-view__days > button > abbr {
+    position: absolute;
+    transform: translate(2px, 1px);
+    font-size: 0.8em;
+  }
+  .react-calendar__month-view__days button {
+    height: 50px;
+    width: 50px;
+  }
+
+  .hot-dot {
+    transform: translate(5px, 20px);
+  }
+  .nomal-dot {
+    transform: translate(20px, 25px);
+  }
+  .react-calendar__tile--now
+    > abbr:not(.react-calendar__year-view__months__month > abbr) {
+    width: 20px;
+    height: 20px;
+  }
 }
